<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_task_list">

    <fragment
        android:id="@+id/navigation_task_list"
        android:name="com.example.effortlessflow.ui.tasklist.TaskListFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_task_list" />

    <fragment
        android:id="@+id/navigation_insights"
        android:name="com.example.effortlessflow.ui.insights.InsightsFragment"
        android:label="@string/title_insights"
        tools:layout="@layout/fragment_insights" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.effortlessflow.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_navigation_settings_to_feedbackFragment"
            app:destination="@id/feedbackFragment" />
    </fragment>

    <fragment
        android:id="@+id/feedbackFragment"
        android:name="com.example.effortlessflow.ui.settings.FeedbackFragment"
        android:label="Send Feedback"
        tools:layout="@layout/fragment_send_feedback" />
</navigation>