<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_background"
    tools:context=".ui.tasklist.TaskListFragment">

    <!-- App Bar for Task List -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_task_list"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/aqua_accent_dark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light.PopupMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="My Tasks"
        app:titleTextColor="@color/white"
        app:menu="@menu/task_list_menu"
        app:navigationIcon="@drawable/ic_tasks"
        app:navigationIconTint="@color/white" />

    <LinearLayout
        android:id="@+id/no_tasks_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_task_list">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_empty_tasks"
            android:contentDescription="@string/no_tasks_icon_description"/>

        <TextView
            android:id="@+id/no_tasks_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/no_tasks_title_msg"
            android:textColor="@color/medium_gray_text"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/no_tasks_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/no_tasks_instruction_message"
            android:textColor="@color/medium_gray_text"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_task_list"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FloatActBtn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/aqua_accent_dark"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_task_fab_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>